@@ -67,7 +67,7 @@ while (count - first) < 10000:
 		backfilldays = "datediff(curdate(),(select value from site where setting = 'safebackfilldate'))"
 
 	#query to grab backfill groups
-		if len(sys.argv) == 1:
+	if len(sys.argv) == 1:
 		cur.execute("SELECT name, first_record from groups where first_record IS NOT NULL and first_record_postdate IS NOT NULL and backfill = 1 and first_record_postdate != '2000-00-00 00:00:00' and (now() - interval %s day) < first_record_postdate %s" % (backfilldays, group))
 		datas = cur.fetchone()
 	else:
